--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ captures/
 
 # Intellij
 *.iml
+/.idea
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -53,3 +54,16 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+## macOS
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+
+## Windows
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+
